feat: templates for file row and headers

--- a/EMS/core-bundle/assets/css/component/media_library.scss
+++ b/EMS/core-bundle/assets/css/component/media_library.scss
@@ -207,15 +207,7 @@ div.media-lib {
               text-decoration: underline;
             }
 
-            > div {
-              flex: 1;
-
-              &:last-child {
-                flex: none;
-                width: 120px;
-                text-align: right;
-              }
-            }
+            > div { flex: 1; }
           }
         }
       }
