--- a/EMS/core-bundle/src/Resources/views/components/media_library/component.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library/component.html.twig
@@ -1,11 +1,12 @@
 {% trans_default_domain 'emsco-component' %}
+{% use '@EMSCore/components/media_library/component_elements.html.twig' %}
 <div class="media-lib" id="{{ id }}" data-hash="{{ hash }}">
     <div class="media-lib-content">
         <div class="media-lib-left-column">
             <div class="media-nav-bar">
-                <button class="btn btn-sm btn-primary btn-home">
-                    <i class="fa fa-home" aria-hidden="true"></i> {{ 'media_library.home'|trans }}
-                </button>
+                {{ template.block('mediaLibraryHeaderLeft', {
+                    'buttonHome': block('buttonHome')
+                })|raw }}
             </div>
             <div class="media-lib-folders">
                 <ul class="media-lib-list-folders"></ul>
@@ -13,14 +14,11 @@
         </div>
         <div class="media-lib-right-column">
             <div class="media-nav-bar">
-                <button class="btn btn-sm btn-primary btn-add-folder">
-                    <i class="fa fa-folder" aria-hidden="true"></i> {{ 'media_library.folder.add.title'|trans }}
-                </button>
-                <input type="file" id="media-lib-upload-{{ id }}" class="file-uploader-input" multiple="multiple">
-                <label class="btn btn-sm btn-primary" for="media-lib-upload-{{ id }}">
-                    <i class="fa fa-upload"></i> {{ 'media_library.file.add.title'|trans }}
-                </label>
-                <ul class="media-lib-list-breadcrumb"></ul>
+                {{ template.block('mediaLibraryHeader', {
+                    'buttonAddFolder': block('buttonAddFolder'),
+                    'buttonUpload': block('buttonUpload'),
+                    'breadcrumb': block('breadcrumb')
+                })|raw }}
             </div>
             <div class="media-lib-files">
                 <ul class="media-lib-list-uploads"></ul>
@@ -28,5 +26,7 @@
             </div>
         </div>
     </div>
-    <div class="media-lib-footer"></div>
+    <div class="media-lib-footer-container">
+        {{ template.block('mediaLibraryFooter')|raw }}
+    </div>
 </div>
