--- a/EMS/core-bundle/assets/css/component/media_library.scss
+++ b/EMS/core-bundle/assets/css/component/media_library.scss
@@ -4,6 +4,10 @@ div.media-lib {
   border: solid 1px #ddd;
   color: #333333;
 
+  .media-lib-container {
+    background-color: #f5f5f5;
+  }
+
   button[disabled], label[disabled] {
     opacity: 100%;
     cursor: progress;
@@ -25,15 +29,16 @@ div.media-lib {
     height: calc(90vh - 200px);
 
     div.media-nav-bar {
-      padding: 8px;
-      background-color: #f5f5f5;
-      border-bottom: 1px solid #DCDCDC;
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      column-gap: 8px;
-      row-gap: 8px;
-      align-items: center;
+      & > div  {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 8px;
+        row-gap: 8px;
+        align-items: center;
+        padding: 8px;
+        border-bottom: 1px solid #DCDCDC;
+      }
 
       ul.media-lib-list-breadcrumb {
         display: none;
@@ -214,11 +219,9 @@ div.media-lib {
     }
   }
 
-  div.media-lib-footer-container {
+  div.media-lib-footer {
     flex-shrink: 0;
-
-    > div.media-lib-footer {
-      background-color: #f5f5f5;
+    & > div {
       border-top: 1px solid #DCDCDC;
       padding: 8px;
       height: 100%;
