--- a/EMS/core-bundle/src/Resources/views/components/media_library/component.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library/component.html.twig
@@ -26,7 +26,7 @@
             </div>
         </div>
     </div>
-    <div class="media-lib-footer-container">
+    <div class="media-lib-footer">
         {{ template.block('mediaLibraryFooter')|raw }}
     </div>
 </div>
