--- a/demo/skeleton/template/fragments/footer.html.twig
+++ b/demo/skeleton/template/fragments/footer.html.twig
@@ -7,7 +7,7 @@
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-3 mb-3">
-                    <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="{{ path('emsch_homepage') }}" aria-label="{{ 'site.name'|trans }}">
+                    <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="{{ path('emsch_path') }}" aria-label="{{ 'site.name'|trans }}">
                         <img src="{{ asset("img/logos/elasticms-ball-colour-rvb.svg", 'emsch') }}" width="35" height="35" alt="">
                         &nbsp;
                         <span class="fs-5">{{ 'site.name'|trans }}</span>
