--- a/demo/skeleton/template/structure/by_path.html.twig
+++ b/demo/skeleton/template/structure/by_path.html.twig
@@ -16,25 +16,25 @@
 
 
 {% set source = target.source|default(null) %}
-{#{% set currentStructure = attribute(structure, app.request.locale).structure|default("[]")|ems_json_menu_nested_decode %}#}
+{% set currentStructure = attribute(structure, app.request.locale).structure|default("[]")|ems_json_menu_nested_decode %}
 
-{#{% set baseTemplate = '@EMSCH/template/structure/target-not-found.html.twig' %}#}
+{% set baseTemplate = '@EMSCH/template/structure/target-not-found.html.twig' %}
 
-{#{% if target.contentType|default(null) == 'slideshow' %}#}
-{#    {% set baseTemplate = '@EMSCH/template/slideshow/revealjs.html.twig' %}#}
-{#{% elseif target.contentType|default(null) == 'page' %}#}
-{#    {% set baseTemplate = '@EMSCH/template/page/by_type.html.twig' %}#}
-{#{% endif %}#}
-{#{% extends baseTemplate %}#}
+{% if target.contentType|default(null) == 'slideshow' %}
+    {% set baseTemplate = '@EMSCH/template/slideshow/revealjs.html.twig' %}
+{% elseif target.contentType|default(null) == 'page' %}
+    {% set baseTemplate = '@EMSCH/template/page/by_type.html.twig' %}
+{% endif %}
+{% extends baseTemplate %}
 
-{#{% block breadcrumb_items -%}#}
-{#    {% for breadcrumbItem in currentStructure.breadcrumb(pathInfo.uid)|default([]) %}#}
-{#        <li class="breadcrumb-item">#}
-{#            {% if attribute(pathsByUids, breadcrumbItem.id) is defined and pathInfo.uid != breadcrumbItem.id %}#}
-{#                <a href="{{ attribute(pathsByUids, breadcrumbItem.id).path }}">{{ breadcrumbItem.label }}</a>#}
-{#            {% else %}#}
-{#                {{ breadcrumbItem.label }}#}
-{#            {% endif %}#}
-{#        </li>#}
-{#    {% endfor %}#}
-{#{%- endblock %}#}
+{% block breadcrumb_items -%}
+    {% for breadcrumbItem in currentStructure.breadcrumb(pathInfo.uid)|default([]) %}
+        <li class="breadcrumb-item">
+            {% if attribute(pathsByUids, breadcrumbItem.id) is defined and pathInfo.uid != breadcrumbItem.id %}
+                <a href="{{ attribute(pathsByUids, breadcrumbItem.id).path }}">{{ breadcrumbItem.label }}</a>
+            {% else %}
+                {{ breadcrumbItem.label }}
+            {% endif %}
+        </li>
+    {% endfor %}
+{%- endblock %}
