--- a/demo/skeleton/template/variables.twig
+++ b/demo/skeleton/template/variables.twig
@@ -11,6 +11,8 @@
     {% if app.user %}
         {% set baseUrl = "/channel/#{trans_default_domain}" %}
     {% endif %}
+    {% set website_name =  'elasticMS Promo' %}
+    {% set website_shortname =  'eMS Promo' %}
 
     {%- block request %}{% endblock request -%}
 
