ref: landing page meta title

--- a/demo/skeleton/template/view/language_select.html.twig
+++ b/demo/skeleton/template/view/language_select.html.twig
@@ -3,6 +3,8 @@
 
 {% block body_attr %}id="languages-page"{% endblock %}
 
+{% block metatitle %}Select language{% endblock %}
+
 {%- block body -%}
     {% apply spaceless %}
         <div id="wrapper" class="vertical-center">
