--- a/demo/skeleton/template/view/language_select.html.twig
+++ b/demo/skeleton/template/view/language_select.html.twig
@@ -11,7 +11,7 @@
             <div class="container">
                 <div class="brand text-center">
                     <div class="d-block brand-logo mb-5">
-                        <img src="{{ asset("img/logos/full-logo.svg", 'emsch') }}" width="280" class="d-inline-block align-middle" alt="{{ 'site.site_name'|trans }}">
+                        <img src="{{ asset("img/logos/full-logo.svg", 'emsch') }}" width="280" class="d-inline-block align-middle" alt="{{ 'site.short_name'|trans }}">
                     </div>
                     <div class="choice-btn">
                         {% for locale in locales %}
