--- a/demo/skeleton/template/base/bootstrap.html.twig
+++ b/demo/skeleton/template/base/bootstrap.html.twig
@@ -3,62 +3,96 @@
 
 {% block body -%}
     <a class="skip-to-content" href="#content">{{ 'aria.skip-to-content'|trans }}</a>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" data-active-message="{{ 'aria.navbar.active-item'|trans }}">
-            <a class="navbar-brand" href="{{ path('emsch_path') }}">
-                <img src="{{ asset("img/logos/elasticms-ball-colour-rvb.svg", 'emsch') }}" width="30" height="30" alt="{{ 'site.name'|trans }}">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="{{ 'aria.toggle-navbar'|trans }}">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+{#    <header>#}
+{#        <nav class="navbar navbar-expand-lg navbar-light bg-light" data-active-message="{{ 'aria.navbar.active-item'|trans }}">#}
+{#            <a class="navbar-brand" href="{{ path('emsch_path') }}">#}
+{#                <img src="{{ asset("img/logos/elasticms-ball-colour-rvb.svg", 'emsch') }}" width="30" height="30" alt="{{ 'site.name'|trans }}">#}
+{#            </a>#}
+{#            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"#}
+{#                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="{{ 'aria.toggle-navbar'|trans }}">#}
+{#                <span class="navbar-toggler-icon"></span>#}
+{#            </button>#}
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                {{ render_esi(controller('emsch.controller.embed::fragment', {
-                    template: '@EMSCH/template/fragments/navbar.html.twig',
-                    context: {
-                        trans_default_domain: trans_default_domain,
-                        locale: locale,
-                        structure: 'structure:ZZpgI38B0UG6UUhkFHG3',
-                    },
-                })) }}
-                {% if switchUrls|default([])|length > 0 %}
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown languages d-none d-xl-block">
-                            <a class="nav-link dropdown-toggle" href="{{ canonicalUrl|default('#') }}" id="dropdown-locales" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ locale|upper }}</a>
+{#            <div class="collapse navbar-collapse" id="navbarSupportedContent">#}
+{#                {{ render_esi(controller('emsch.controller.embed::fragment', {#}
+{#                    template: '@EMSCH/template/fragments/navbar.html.twig',#}
+{#                    context: {#}
+{#                        trans_default_domain: trans_default_domain,#}
+{#                        locale: locale,#}
+{#                        structure: 'structure:ZZpgI38B0UG6UUhkFHG3',#}
+{#                    },#}
+{#                })) }}#}
+{#                {% if switchUrls|default([])|length > 0 %}#}
+{#                    <ul class="navbar-nav">#}
+{#                        <li class="nav-item dropdown languages d-none d-xl-block">#}
+{#                            <a class="nav-link dropdown-toggle" href="{{ canonicalUrl|default('#') }}" id="dropdown-locales" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ locale|upper }}</a>#}
+{#                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-locales">#}
+{#                                {% for locale, url in switchUrls %}#}
+{#                                    <a lang="{{ locale }}" class="dropdown-item" href="{{ url }}">{{ 'navbar.swith-to-locale'|trans({}, trans_default_domain , locale)}}</a>#}
+{#                                {% endfor %}#}
+{#                            </div>#}
+{#                        </li>#}
+{#                    </ul>#}
+{#                {% endif %}#}
+{#            </div>#}
+{#        </nav>#}
+{#    </header>#}
+{#    {% block breadcrumb -%}#}
+{#        <nav aria-label="breadcrumb">#}
+{#            <ol class="breadcrumb">#}
+{#                <li class="breadcrumb-item"><a href="{{ path('emsch_path') }}"><i class="fa fa-home" aria-hidden="true"></i> <span class="sr-only">{{ 'breadcrumb.home'|trans }}</span></a></li>#}
+{#                {% block breadcrumb_items -%}#}
+{#                    <li class="breadcrumb-item active" aria-current="page">{{ block('title') }}</li>#}
+{#                {%- endblock %}#}
+{#            </ol>#}
+{#        </nav>#}
+{#    {%- endblock breadcrumb %}#}
+    <main role="main" id="content">
+        {% block main -%}{%- endblock main %}
+    </main>
+
+    <footer class="bd-footer py-5 border-top" {{ emsch_admin_menu(footer_menu) }}>
+        <div class="container-fluid container-lg">
+            <div class="row">
+                <div class="col-12 col-md-8">
+                    <ul class="navbar-nav flex-lg-row">
+                        {{ render_esi(controller('emsch.controller.embed::fragment', {
+                            template: '@EMSCH/template/fragments/footer.html.twig',
+                            context: {
+                                trans_default_domain: trans_default_domain,
+                                locale: locale,
+                                section: footer_menu,
+                            },
+                        })) }}
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4 d-md-flex align-items-center justify-content-end">
+                    {% if switchUrls|default([])|length > 0 %}
+                        <div class="dropdown mt-4 mt-lg-0">
+                            <a class="btn btn-sm btn-outline-dark dropdown-toggle"
+                               href="#" id="dropdown-locales" data-toggle="dropdown"
+                               aria-haspopup="true" aria-expanded="false">{{ 'locale'|trans }}</a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-locales">
-                                {% for locale, url in switchUrls %}
-                                    <a lang="{{ locale }}" class="dropdown-item" href="{{ url }}">{{ 'navbar.swith-to-locale'|trans({}, trans_default_domain , locale)}}</a>
+                                {% for l, url in switchUrls %}
+                                    <a lang="{{ l }}" class="dropdown-item" href="{{ url }}">
+                                        {{ 'locale'|trans({}, trans_default_domain , l) }}
+                                    </a>
                                 {% endfor %}
                             </div>
-                        </li>
-                    </ul>
-                {% endif %}
+                        </div>
+                    {% endif %}
+                </div>
             </div>
-        </nav>
-    </header>
-    {% block breadcrumb -%}
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="{{ path('emsch_path') }}"><i class="fa fa-home" aria-hidden="true"></i> <span class="sr-only">{{ 'breadcrumb.home'|trans }}</span></a></li>
-                {% block breadcrumb_items -%}
-                    <li class="breadcrumb-item active" aria-current="page">{{ block('title') }}</li>
-                {%- endblock %}
-            </ol>
-        </nav>
-    {%- endblock breadcrumb %}
-    <main role="main" id="content">
-        <div class="container">
-            {% block main -%}{%- endblock main %}
+
+            <div class="copyright mt-5">
+                {{ 'site.copy'|trans({ '%year%': 'now'|date('Y') }) }}
+                &nbsp;
+                <img src="{{ asset("img/logos/full-logo.svg", 'emsch') }}" height="30" alt="{{ 'site.name'|trans }}">
+                &nbsp;
+                <a href="https://ems-project.github.io/#/" target="_blank" class="no-ico"><i class="fab fa-github fa-2x"><span class="sr-only">{{ 'footer.join-us-github' }}</span></i></a>
+            </div>
+
         </div>
-    </main>
-    {{ render_esi(controller('emsch.controller.embed::fragment', {
-        template: '@EMSCH/template/fragments/footer.html.twig',
-        context: {
-            trans_default_domain: trans_default_domain,
-            locale: locale,
-            structure: 'structure:-VrbHH8B_Z8L5WrB3FMp',
-        },
-    })) }}
+    </footer>
     <a id="back2top" href="#logo" title="{{ 'aria.back-to-top'|trans|e('html_attr') }}"><i class="fas fa-arrow-up"></i><span>{{ 'aria.back-to-top'|trans }}</span></a>
 {%- endblock %}
