--- a/demo/src/css/pages/_with_banner.scss
+++ b/demo/src/css/pages/_with_banner.scss
@@ -1,4 +1,4 @@
-.homepage {
+.with-banner {
   .jumbotron {
     padding-top: 0;
     padding-bottom: $jumbotron-padding / 2;
@@ -23,7 +23,6 @@
       align-items: center;
       padding-top: $jumbotron-padding / 2 + $header-height;
       background-color: $jumbotron-bg-hp;
-      background-image: url('../img/banners/banner-home.jpg');
       background-repeat: no-repeat;
       background-position: right 40%;
       min-height: 300px;
