--- a/demo/skeleton/template/base/bootstrap.html.twig
+++ b/demo/skeleton/template/base/bootstrap.html.twig
@@ -3,7 +3,6 @@
 
 {% block body -%}
     <a class="skip-to-content" href="#content">{{ 'aria.skip-to-content'|trans }}</a>
-
     <header>
         <div class="container-fluid container-lg">
             <nav class="navbar navbar-expand-lg navbar-light" data-active-message="{{ 'aria.navbar.active-item'|trans }}">
@@ -27,43 +26,8 @@
             </nav>
         </div>
     </header>
-
-{#    <header>#}
-{#        <nav class="navbar navbar-expand-lg navbar-light bg-light" data-active-message="{{ 'aria.navbar.active-item'|trans }}">#}
-{#            <a class="navbar-brand" href="{{ path('emsch_path') }}">#}
-{#                <img src="{{ asset("img/logos/elasticms-ball-colour-rvb.svg", 'emsch') }}" width="30" height="30" alt="{{ 'site.name'|trans }}">#}
-{#            </a>#}
-{#            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"#}
-{#                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="{{ 'aria.toggle-navbar'|trans }}">#}
-{#                <span class="navbar-toggler-icon"></span>#}
-{#            </button>#}
-
-{#            <div class="collapse navbar-collapse" id="navbarSupportedContent">#}
-{#                {{ render_esi(controller('emsch.controller.embed::fragment', {#}
-{#                    template: '@EMSCH/template/fragments/navbar.html.twig',#}
-{#                    context: {#}
-{#                        trans_default_domain: trans_default_domain,#}
-{#                        locale: locale,#}
-{#                        structure: 'structure:ZZpgI38B0UG6UUhkFHG3',#}
-{#                    },#}
-{#                })) }}#}
-{#                {% if switchUrls|default([])|length > 0 %}#}
-{#                    <ul class="navbar-nav">#}
-{#                        <li class="nav-item dropdown languages d-none d-xl-block">#}
-{#                            <a class="nav-link dropdown-toggle" href="{{ canonicalUrl|default('#') }}" id="dropdown-locales" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ locale|upper }}</a>#}
-{#                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-locales">#}
-{#                                {% for locale, url in switchUrls %}#}
-{#                                    <a lang="{{ locale }}" class="dropdown-item" href="{{ url }}">{{ 'navbar.swith-to-locale'|trans({}, trans_default_domain , locale)}}</a>#}
-{#                                {% endfor %}#}
-{#                            </div>#}
-{#                        </li>#}
-{#                    </ul>#}
-{#                {% endif %}#}
-{#            </div>#}
-{#        </nav>#}
-{#    </header>#}
     {% block breadcrumb %}{% endblock breadcrumb %}
-    <main role="main" id="content">
+    <main role="main" id="content" class="{% block main_class %}{% endblock %}">
         {% block main -%}{%- endblock main %}
     </main>
 
