--- a/demo/src/css/styles.scss
+++ b/demo/src/css/styles.scss
@@ -34,7 +34,7 @@ $admin-menu-font-color: #FFFFFF;
 @import "components/cookiesBanner";
 @import "components/languages-page";
 
-@import "pages/home";
+@import "pages/with_banner";
 @import "pages/error";
 
 @import "custom";
